# kodik-mpv-plugin

./: .gitlab-ci.yml  Cargo.toml  README.md  build.rs  exports.def  input.conf  kodik.conf
.github/workflows/: ci.yml
src/: cache.rs  config.rs  events.rs  hooks.rs  kodik.rs  lib.rs  logger.rs  models.rs  mpv_ext.rs  related.rs  shiki.rs  state.rs  ytdl.rs
src/shiki/: expand.rs  mark_as_watched.rs  on_load.rs
