[package]
name = "kodik-mpv-plugin"
version = "0.1.0"
description = "mpv plugin to get direct links to Kodik"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]
name = "kodik"

[lints]
workspace = true

[dependencies]
mpv-client = { workspace = true }

[features]
bindgen = ["mpv-client/bindgen"]
