[package]
name = "kodik-mpv-plugin"
version = "0.1.0"
description = "mpv plugin to get direct links to Kodik"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]
name = "kodik"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt"] }
mpv-client = { workspace = true }
kodik-shiki.workspace = true
kodik-parser.workspace = true
reqwest = { workspace = true, features = [
    "cookies",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
serde = { workspace = true, features = ["derive"] }
base64.workspace = true
serde_json.workspace = true
lazy-regex.workspace = true

[features]
bindgen = ["mpv-client/bindgen"]
