[package]
name = "kodik-mpv-plugin"
version = "0.1.2"
description = "mpv plugin to get direct links to Kodik"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]
name = "kodik"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
mpv-client.workspace = true
kodik-shiki.workspace = true
kodik-parser.workspace = true
reqwest = { workspace = true, features = [
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
lazy-regex.workspace = true
kodik-utils.workspace = true
log.workspace = true
env_logger.workspace = true
futures.workspace = true
webpki-root-certs.workspace = true

[features]
bindgen = ["mpv-client/bindgen"]
